refactor(m-61): rename Authentication docs to Auth
